--- a/Detachable.Project.Entity/Detachable.Project.Entity.csproj
+++ b/Detachable.Project.Entity/Detachable.Project.Entity.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Attributes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Detachable.Project.MessageBus\Detachable.Project.MessageBus.csproj" />
   </ItemGroup>
 
 </Project>
