--- a/Detachable.Project.WebApi/Detachable.Project.WebApi.csproj
+++ b/Detachable.Project.WebApi/Detachable.Project.WebApi.csproj
@@ -1,22 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<LangVersion>10.0</LangVersion>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Detachable.Project.Business\Detachable.Project.Business.csproj" />
-    <ProjectReference Include="..\Detachable.Project.Core\Detachable.Project.Core.csproj" />
-    <ProjectReference Include="..\Detachable.Project.Entity\Detachable.Project.Entity.csproj" />
-    <ProjectReference Include="..\Detachable.Project.IBusiness\Detachable.Project.IBusiness.csproj" />
-    <ProjectReference Include="..\Detachable.Project.MessageBus\Detachable.Project.MessageBus.csproj" />
-    <ProjectReference Include="..\Detachable.Project.Utility\Detachable.Project.Utility.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Detachable.Project.Business\Detachable.Project.Business.csproj" />
+		<ProjectReference Include="..\Detachable.Project.Core\Detachable.Project.Core.csproj" />
+		<ProjectReference Include="..\Detachable.Project.Entity\Detachable.Project.Entity.csproj" />
+		<ProjectReference Include="..\Detachable.Project.IBusiness\Detachable.Project.IBusiness.csproj" />
+		<ProjectReference Include="..\Detachable.Project.MessageBus\Detachable.Project.MessageBus.csproj" />
+		<ProjectReference Include="..\Detachable.Project.Utility\Detachable.Project.Utility.csproj" />
+	</ItemGroup>
 	<ItemGroup>
 		<Reference Include="StartupDiagnostics">
 			<HintPath>..\Detachable.Project.ExternalAssembly\bin\Debug\net6.0\Detachable.Project.ExternalAssembly.dll</HintPath>
