--- a/Detachable.Project.WebApi/Detachable.Project.WebApi.csproj
+++ b/Detachable.Project.WebApi/Detachable.Project.WebApi.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.29" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	</ItemGroup>
 
