--- a/Detachable.Project.ExternalAssembly/Detachable.Project.ExternalAssembly.csproj
+++ b/Detachable.Project.ExternalAssembly/Detachable.Project.ExternalAssembly.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.29" />
   </ItemGroup>
 
 </Project>
